# RomanNumeralCalculatorTDD

./: Makefile.am  Makefile.am.bp  Makefile.in  README.md  aclocal.m4  config.h.in~  configure  configure.ac  configure.ac.bp
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
src/: main.c  roman.c  roman.h
test/: test_main.c
